--- a/Lecture1 - Image Classification.ipynb
+++ b/Lecture1 - Image Classification.ipynb
@@ -10,15 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sklearn\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "# import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import fetch_openml"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -31,11 +32,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load the MNIST dataset and normalize the pixel values\n",
+    "(train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.mnist.load_data()\n",
+    "train_images = train_images / 255.0\n",
+    "test_images = test_images / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images = train_images.reshape((train_images.shape[0], 28 * 28))\n",
+    "test_images = test_images.reshape((test_images.shape[0], 28 * 28))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(train_images, train_labels)\n",
+    "y_pred = knn.predict(test_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist = fetch_openml('mnist_784')\n"
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = accuracy_score(test_labels, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model: 97.05%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy of the model: {:.2f}%\".format(accuracy * 100))"
    ]
   },
   {
@@ -43,25 +131,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "# Split the dataset into training and test sets\n",
-    "train_data = mnist['data'][:60000]\n",
-    "train_labels = mnist['target'][:60000]\n",
-    "test_data = mnist['data'][60000:]\n",
-    "test_labels = mnist['target'][60000:]\n",
-    "\n",
-    "# Train a k-NN classifier on the training data\n",
-    "knn = KNeighborsClassifier(n_neighbors=3)\n",
-    "knn.fit(train_data, train_labels)\n",
-    "\n",
-    "# Make predictions on the test data\n",
-    "predictions = knn.predict(test_data)\n",
-    "\n",
-    "# Compute the accuracy of the classifier\n",
-    "accuracy = accuracy_score(test_labels, predictions)\n",
-    "print('Accuracy:', accuracy)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
